--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="js/time.js"></script>
 </head>
 <body style="background-color:#62080D">
-<div style="width:1000px;height:100%;left:50%;margin-left:500px;">
+<div style="width:1000px;height:100%;">
 <div style="text-align:left">
 	<img src="http://hebei.sinaimg.cn/2015/0213/U11794P1275DT20150213094722.jpg"  style="width:1000px;height:400px"/>
 	<p style="font-size:36px;font-family:黑体;color:#fff">距离下一波抢购倒计时：</p>
